# nft-icrc7

./: Cargo.toml  dfx.json
integrations_tests/: Cargo.toml  wasm
integrations_tests/src/: utils.rs
integrations_tests/src/client/: core_nft.rs
integrations_tests/src/core_suite/setup/: setup.rs
integrations_tests/src/core_suite/tests/: test_icrc3.rs  test_icrc37.rs  test_management.rs
scripts/: build.sh
src/core_nft/src/: lib.rs  memory.rs  state.rs  utils.rs
src/core_nft/src/lifecycle/: init.rs  post_upgrade.rs
src/core_nft/src/queries/: icrc7.rs  mod.rs
src/core_nft/src/types/: icrc37.rs  management.rs  metadata.rs  sub_canister.rs  value_custom.rs  wrapped_types.rs
src/core_nft/src/updates/: icrc37.rs  management.rs
src/core_nft/wasm/: can.did
src/index_icrc7/src/: blocks.rs  cache.rs  index.rs  jobs.rs  utils.rs  wrapped_values.rs
src/index_icrc7/src/lifecycle/: mod.rs
src/index_icrc7/src/queries/: mod.rs
src/index_icrc7/src/update/: get_blocks.rs
src/index_icrc7/wasm/: index_icrc7.wasm
wasm/: storage_canister.wasm
