[workspace]
members = [
    "integrations_tests",
    "src/core_nft",
    "src/index_icrc7",
    "cmdline",
    "test_canister"
]
resolver = "2"

[profile.release]
lto = "thin"
panic = "abort"


[workspace.dependencies]
candid = { version = "0.10.21", features = ["value"] }
ciborium = "0.2.2"
futures = "0.3.29"
# Enable `custom` feature of k256's getrandom dependency. See icp_neuron/impl/src/ecdsa.rs for more details.
getrandom = { version = "0.4.1", features = ["custom"] }
hex = "0.4.3"
ic-cdk = "0.19.0"
ic-cdk-macros = "0.19.0"
ic-cdk-timers = "1.0.0"
ic-ledger-types = "0.16.0"
ic-stable-structures = "0.7.2"
ic-transport-types = "0.45.0"
ic0 = "1.0.1"
icrc-ledger-types = "0.1.10"
k256 = "0.13.1"
proc-macro2 = "1.0.95"
quote = "1.0.44"
rmp-serde = "1.3.1"
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_cbor = "0.11.2"
serde_json = "1.0.149"
serde_with = "3.7.0"
serde_yaml = "0.9.33"
serde_tokenstream = "0.2.2"
sha2 = "0.10.9"
syn = "2.0.114"
tracing = "0.1.44"
tracing-attributes = "0.1.31"
tracing-subscriber = "0.3.22"
num-bigint = "0.4.4"
time = { version = "0.3.47", features = [
  "macros",
  "serde",
  "parsing",
  "formatting",
] }
pocket-ic = "12.0.0"
async-trait = "0.1.89"
enum_dispatch = "0.3.13"
typetag = "0.2.18"
minicbor = { version = "1.0.0", features = ["alloc", "derive"] }
canfund = "0.8.5"
ic-asset-certification = "3.1.0"
ic-http-certification = "3.1.0"
lazy_static = "1.4.0"
url = "2.5.8"

bity-ic-canister-client         = "0.3.0"
bity-ic-canister-logger         = "0.3.0"
bity-ic-canister-state-macros   = "0.2.2"
bity-ic-canister-tracing-macros = "0.1.1"
bity-ic-canister-time           = "0.3.0"
bity-ic-serializer              = "0.2.0"
bity-ic-stable-memory           = "0.3.0"
bity-ic-types                   = "0.2.0"
bity-ic-utils                   = "0.3.0"
bity-ic-subcanister-manager     = "0.4.0"
# Using local fork with external MemoryManager support
bity-ic-icrc3                   = { path = "../dfinity-rust-libraries/src/icrc3" }
bity-ic-icrc3-macros            = { path = "../dfinity-rust-libraries/src/icrc3_macros" } 
bity-ic-storage-canister-c2c    = { path = "../ic-storage-canister/c2c" }
bity-ic-icrc3-archive-c2c-client    = "0.4.0"
bity-ic-icrc3-c2c-client    = "0.2.0"
bity-ic-storage-canister-api = { path = "../ic-storage-canister/api" }
