[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pocket-ic = { workspace = true}
candid = { workspace = true }
serde = { workspace = true, features = ["derive"] }

bity-ic-types = { workspace = true }
bity-ic-utils = { workspace = true }
bity-ic-canister-time = { workspace = true }
bity-ic-storage-canister-api = { workspace = true }

tokio = { version = "1.47.1", features = ["full"]}

icrc-ledger-types              = { workspace = true }
ic-ledger-types                = { workspace = true }
rand                           = "0.10.0"
lazy_static                    = "1.5.0"
hex                            = "0.4.3"
sha2                           = "0.10.9"
serde_bytes                    = { workspace = true }
serde_json                     = { workspace = true }
tempfile                       = "3.21.0"
core_nft                       = { path = "../src/core_nft"}
index_icrc7                    = { path = "../src/index_icrc7"}
ic-cdk                         = { workspace = true }
reqwest                        = "0.13.2"
# ic-agent                       = { version = "0.44.3"}
ic-agent                       = { version = "0.40.1"}

ic-http-gateway                = { version = "0.3.0"}
http                           = "1.3.1"
bytes                          = "1.10.1"
http-body-util                 = "0.1.3"
url                            = "2.5.7"
